--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,43 +1,46 @@
  <!-- specific list ka all details show hoga -->
 <!-- show all details of specific list which is clicked by user -->
-
+<!-- here "listing.title" is passed from app.js which store specfic list and we show all details  -->
+     <!-- res.render("./listings/show.ejs",{listing});  -->
 
 
 
 
  
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
+<% layout('layouts/boilerplate') -%>
+<body>
+   <div class="row mt-3">
+      <div class="  col-8 offset-3">
+         <h3>Listing Details:</h3>
+      </div>
+     <div class="card col-6 offset-3 show-card">
+          <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
 
+            <div class="card-body">
+              <p class="card-text"> 
+                <b><%= listing.title %> </b> <br>
+               <%= listing.description %> <br>
+               &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
+               <%= listing.location %> <br>
+               <%= listing.country %>
+               </p>
+             </div>
+           <br>
+            <div class=" btns">
+           
+               <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-2 offset-3 edit-btn"> Edit </a>
+            
+            
+                <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
+                    <button class="btn btn-dark offset-5" type="submit">  Delete </button>
+                </form>
+            </div>
+ 
+        </div>
+    </div>
+</body>
+   
 
-   <body>
-    
-   
-    <h3>Listing Details : </h3>
-   
-    <!-- here "listing.title" is passed from app.js which store specfic list and we show all details  -->
-     <!-- res.render("./listings/show.ejs",{listing});  -->
-<ul>
-<li><%= listing.title %></li>
-<li><%= listing.description %></li>
-<li> &#8377; <%= listing.price.toLocaleString("en-IN") %></li>        
-<li><%= listing.location %></li>
-<li><%= listing.country %></li>
-</ul>
-<br>
-<a href="/listings/<%= listing._id %>/edit"> Edit this Listing</a>
-<br><br>
-<form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-<button>delete this listing</button>
-</form>
-</body>   
-   
-</html>
 
 
 
