--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,176 @@
-/* body{
-    background-color: pink;
-} */
+body {
+    font-family: "Plus Jakarta Sans", sans-serif !important;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
-/* navbar */
+.container {
+    flex: 1;
+}
+
+
+/*Nav bar*/
 .navbar {
- height:5rem;
- background-color: white;
+    height: 4.5rem;
+    background-color: white;
+}
+
+.nav-link {
+    color: #000000 !important;
 }
 
 .fa-compass {
-    color: #fe424d;
+    color: #FF0000;
     font-size: 2rem;
 }
-.nav-link {
-    color: #222222 !important;
+
+
+/*Footer*/
+
+.f-info-links a {
+    text-decoration: none;
+    color: #222222;
 }
+
+.f-info-links a:hover {
+    text-decoration: underline;
+}
+
+.f-info-links {
+    width: 100%;
+}
+
+.f-info-socials {
+    width: 100%;
+    
+}
+
+.f-info-socials i {
+    margin-right: 1.2rem;
+    font-size: 2rem;
+}
+
+.f-info {
+    height: 8rem;
+    display: flex;
+    background-color: #ebebeb;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+    padding: 0 2rem;
+    text-align: center;
+
+}
+
+
+
+/*Cards*/
+
+.card {
+    width: 20%;
+    height: 20rem;
+    margin: 2rem;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    border: none !important;
+}
+
+.card-img-top {
+    height: 100%;
+    object-fit: cover !important;
+    border-radius: 1rem !important;
+    width: 100% !important;
+}
+
+.card-body {
+    padding: 0 !important;
+}
+
+.card-text p {
+    font-weight: 400;
+}
+.listing-link {
+    text-decoration: none;
+}
+.card-title {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.card-img-overlay {
+    opacity: 0;
+}
+
+
+        /* picture pe hover krne se efeect aaye */
+.card-img-overlay:hover {
+    opacity: 0.2;
+    background-color: white;
+}
+
+
+/* new page */
+/* .add-btn {
+    background-color: #fe424d !important;
+    border: none !important;
+    
+} */
+
+ .add-btn {
+    background-color:  #fe424d!important;
+    color: white;
+    border: none !important;
+    padding: 1rem 2rem;
+    border-radius: 5px;
+}
+
+.add-btn:hover {
+    background-color: #002fff !important;
+    transition: background-color 0.3s;
+}
+
+/*For edit.ejs*/
+.edit-btn {
+    background-color: #fe424d!important;
+    /* color: white; */
+    border: none;
+    /* padding: 1rem 2rem; */
+     /* border-radius: 5px; */
+} 
+
+/*Show page styling*/
+
+
+/* .listing-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+} */
+
+.show-img{
+    height:30vh
+}
+
+.btns {
+    display: flex;
+    
+    
+}
+
+.show-card{
+    padding-left: 0;
+     padding-right: 0;
+}
+
+/* .edit-page-btn a {
+    text-decoration: none;
+    color: white;
+}
+
+.list-delete-btn {
+    text-decoration: none;
+    background: none;
+    color: white;
+    border: none;
+}  */
