--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -3,29 +3,58 @@
                                                             
                                     <!-- THIS FILE IS SHOWING ALL LISTING ALSO AVAILABE HERE THAT CREATE NEW LISTING-->
 
+  
+<% layout("layouts/boilerplate") %>
 
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wanderlust</title>
-</head>
 <body>
     <h3>All Listings</h3>
 
     <!-- comment it becose available in navbar to create new listing -->
-     <form method="GET" action="/listings/new">
+     <!-- <form method="GET" action="/listings/new">
         <button>Create New Listing</button>
-     </form>
-    <ul>
+     </form> -->
+
+
+<!-- for card type from bootstrap -->
+<!-- for loop run krega means for one loop ,one card will be create -->
+
+
+
+
+
+     <div class="listing-container row row-cols-lg-4  row-cols-md-3 row-cols-sm-1">
+        <%  for (let listing of allListings) { %>
+            <!-- Display each listing as a card -->
+             <!-- each card is in anchor tag -->
+            <a href="/listings/<%= listing._id%>" class="listing-link">
+                <div class="card col" style="width:20rem;">
+                    <img src="<%= listing.image.url %>" class="card-img-top" alt="Listing Image" style="height: 20rem; ">
+                    <div class="card-img-overlay"></div>
+                    <div class="card-body">
+                        <p class="card-text">
+                            <b><%= listing.title %></b><br>
+                            <%= listing.location %> <br>
+                            &#8377; <%= listing.price.toLocaleString("en-IN") %> / night
+                        </p>
+                    </div>
+                </div>
+            </a>
+            <% } %>
+    </div>
+
+
+
+
+
+
+
+    <!-- <ul>
         <%  for (let listing of allListings) { %>
             <li> <a href="/listings/<%= listing._id %>"> <%= listing.title %> </a> </li>
         <% } %>
-    </ul>                                     
+    </ul>               -->
 </body>
-</html>
+
 
 
 
