--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,32 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WanderLust</title>
-</head>
-<body>
-    <h3>Create a new Listing</h3>
-    <form method="POST" action="/listings">
-        <input name="listing[title]" type="text" placeholder="Enter title" >
-        <br><br>
-        <textarea name="listing[description]" placeholder="Enter description" ></textarea>
-        <br><br>
-        <input name="listing[image]" type="text" placeholder="Enter image url/link" >
-        <br><br>
-        <input name="listing[price]" type="number" placeholder="Enter price" >
-        <br><br>
-        <input name="listing[country]" type="text" placeholder="Enter country name" >
-        <br><br>
-        
-        <input name="listing[location]" type="text" placeholder="Enter location" >
-        <br><br>
-        
-          <button>Add</button>
-    </form>
-</body>
-</html> 
-
+<!--<body>-->
+    <% layout('layouts/boilerplate') -%>
+    <body>
+        <div class="listing-container mb-3 row" >
+            <div class="listing-card col-8 offset-2">
+                <h2>Create a new Listing</h2>
+                <form action="/listings" method="POST" class="needs-validation" novalidate>
+                    <div class="form-group mb-3">
+                        <label for="title">Title:</label>
+                        <input type="text" class="form-control" id="title" name="listing[title]" required>
+                    <div class="valid-feedback">Title looks good</div>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="description ">Description:</label>
+                        <textarea class="form-control" id="description" name="listing[description]" rows="3" required></textarea>
+                    </div>
+                    <div class="form-group mb-3">
+                        <label for="price">Price:</label>
+                        <input placeholder="$USD" type="number" class="form-control" id="price" name="listing[price]" required>
+                    <div class="invalid-feedback">Please enter a valid price</div>
+                    </div>
+                    <div class=" row mb-3">
+                        <div class="form-group mb-3 col-md-8">
+                            <label for="location">Location:</label>
+                            <input placeholder="location" type="text" class="form-control" id="location" name="listing[location]" required>
+                        </div>
+                        <div class="form-group mb-3 col-md-4">
+                            <label for="country">Country:</label>
+                            <input placeholder="Enter country" type="text" class="form-control" id="country" name="listing[country]" required>
+                        </div>
+                    </div>
+                    <div class="form-group mb-3 ">
+                        <label for="image-url">Image:</label>
+                        <input type="text" class="form-control-file" id="image-url" name="listing[image][url]">
+                    </div>
+                    <button  class="btn btn-dark add-btn">Add</button>
+                    <a href="/listings" class="btn btn-secondary">Cancel</a>
+                </form>
+            </div>
+        </div>
+    </body>
 
 
 
