Update listing routes and views, improve layout and styles across pages

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -6,7 +6,9 @@
             <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
             <a href="#"><i class="fa-brands fa-pinterest"></i></a>
         </div>
-        <div class="f-info-copyright">&copy; 2024 Wanderlust. All rights reserved.</div>
+        <div class="f-info-copyright">&copy; 2025 Airbnb Ins — Stay curious, stay inspired. All rights reserved.</div>
+
+
         <div class="f-info-links">
             <a href="#">Privacy</a>
             <a href="#">Terms</a>
