--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,7 +69,8 @@ body {
 
 .listing-card {
     width: 20%;
-    height: 20rem;
+    /* height: 20rem; */
+    height: auto;
     margin: 2rem;
     background-color: #f2f2f2;
     border-radius: 10px;
@@ -174,3 +175,11 @@ body {
     color: white;
     border: none;
 }  */
+
+
+/* map */
+
+#map {
+    height: 400px;
+    width: 80vh;
+ }
