--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,18 +1,68 @@
+<style>
+  .search-btn{
+    display: flex; /* Ensures icon and text are aligned */
+    align-items: center; /* Aligns the icon and text */
+    background-color: #fe424d;
+    color: white;
+    border-radius: 25px;
+    padding: 0 1rem 0 1rem;
+  }
+  .search-btn:hover{
+    background-color: #fe424d;
+    color: white;
+  }
+  .search-btn i {
+    display: inline;
+    margin-right: 0.5rem;
+    
+  }
+  .search-inp{
+    border-radius: 25px;
+    padding: 0.5rem 3rem 0.5rem 3rem;
+    font-size: 0.8;
+  }
+
+</style>
+
+
+
+
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
-    <button class="navbar-toggler" 
-    type="button"
-     data-bs-toggle="collapse"
-     data-bs-target="#navbarNavAltMarkup" >
+    <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link "  href="/">Home</a>
-        <a class="nav-link" href="/listings">All Listings</a>
+        <!-- <a class="nav-link "  href="/">Home</a> -->
+        <a class="nav-link" href="/listings">Explore</a>
+      </div>
+
+      <!-- for search  -->
+      <div class="navbar-nav ms-auto">
+        <form class="d-flex" role="search">
+          <input class="form-control me-2 search-inp" type="search" placeholder="Search destinations" >
+          <button class="btn search-btn" type="submit"> <i class="fa-solid fa-magnifying-glass"></i> Search</button>
+        </form>
+      </div>
+
+
+
+      <!-- //user authenticate          ms-auto right shift hoga -->
+      <div class="navbar-nav ms-auto">
         <a class="nav-link" href="/listings/new">Add New Listings</a>
-       
+        <% if(!currUser){ %>
+          <!-- req.user btaayega ki user login hai signup hai ya nhi,agr signup ni then niche wala hi hsowhoga -->
+          <a class="nav-link " href="/signup"><b>Signup</b></a>
+          <a class="nav-link" href="/login"><b>login</b></a>
+
+          <% } %>
+
+            <!-- //if user exist then show only logout button -->
+            <% if(currUser){ %>
+              <a class="nav-link" href="/logout">logout</a>
+              <% } %>
       </div>
     </div>
   </div>
