--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,115 +1,194 @@
- <!-- specific list ka all details show hoga -->
+<!-- specific list ka all details show hoga --> 
 <!-- show all details of specific list which is clicked by user -->
 <!-- here "listing.title" is passed from app.js which store specfic list and we show all details  -->
-     <!-- res.render("./listings/show.ejs",{listing});  -->
+<!-- res.render("./listings/show.ejs",{listing});  -->
 
 
 
 
- 
-<% layout('layouts/boilerplate') -%>
-<body>
-   <div class="row mt-3">
-      <div class="  col-8 offset-3">
-         <!-- <h3>Listing Details:</h3> -->
-          <h3><%= listing.title %></h3>
-      </div>
-     <div class="card col-6 offset-3 show-card listing-card">
+
+
+<!-- <body> -->
+
+
+<% layout("/layouts/boilerplate") %>
+  <script>
+    const mapToken = "<%= process.env.MAP_TOKEN %>";   // for map
+    const listing = <%- JSON.stringify(listing) %>; // for exact map
+  </script>
+
+
+  <div class="row mt-3">
+    <div class="  col-8 offset-3">
+      <h3>Listing Details:</h3>
+      <h3>
+        <%= listing.title %>
+      </h3>
+    </div>
+    <div class="card col-6 offset-3 show-card listing-card">
       <!-- listing.image.url -->
-          <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
+      <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
 
-            <div class="card-body">
-              <p class="card-text"> 
-                <!-- <b><%= listing.title %> </b> <br> -->
-               <%= listing.description %> <br>
-               &#8377; <%= listing.price.toLocaleString("en-IN") %> <br>
-               <%= listing.location %> <br>
-               <%= listing.country %>
-               </p>
-             </div>
-           <br>
-            <div class=" btns">
-           
-               <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-2 offset-3 edit-btn"> Edit </a>
-            
-            
-                <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
-                    <button class="btn btn-dark offset-5" >  Delete </button>
-                    <!-- type="submit" -->
-                </form>
-            </div>
+      <div class="card-body">
+        <p class="card-text">Owned by <i>
+            <%= listing.owner.username %>
+          </i> </p>
+        <b>
+          <%= listing.title %>
+        </b> <br>
+        <br />
+        <p class="card-text">
+          <%= listing.description %>
+        </p> <br>
+        <p class="card-text"> &#8377; <%= listing.price.toLocaleString("en-IN") %>
+        </p> <br>
+        <p class="card-text">
+          <%= listing.location %>
+        </p> <br>
+        <p class="card-text">
+          <%= listing.country %>
+        </p>
 
-            <!-- <hr>
-
-            <div class="col-8 offset-3" mb-3>
-              <h4>Leave a Review</h4>
-              <form>
-                    <div class="mb-3 mt-3">
-                      <label for="rating" class="form-label">Rating</label>
-                      <input type="range" min="1" max="5" id="rating" name="review[rating]">
-                    </div>
-
-                    <div class="mb-3 mt-3">
-                      <label for="comment" class="form-label">Comments</label>
-                      <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"></textarea>
-                    </div>
-                    <button class="btn btn-outline-dark">Submit</button>
-              </form>
-            </div> -->
-
- 
-        </div>
+      </div>
+      <br>
 
 
-        <hr>
+      <!-- iff currentuser(who accessing now) and listing owner(real owner) are equal then show these btns ,wahi isko delete aur edit krnege -->
+      <!-- curr user exit ho and upr ka condition then ye shoehoga -->
 
-        <div class="col-8 offset-3" mb-3>
-          <h4>Leave a Review</h4>
-          <form action="/listings/<%= listing._id%>/reviews" method='POST' novalidate class='needs-validation'>
-                <div class="mb-3 mt-3">
-                  <label for="rating" class="form-label">Rating</label>
-                  <input type="range" min="1" max="5" id="rating" name="review[rating]"   class="form-range"  >
-                </div>
+      <% if(currUser && currUser._id.equals(listing.owner._id)) { %>
+        <div class=" btns">
 
-                <div class="mb-3 mt-3">
-                  <label for="comment" class="form-label">Comments</label>
-                  <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-                  <div class="invalid-feedback">Please add some comments for review</div>
-                </div>
-                <button class="btn btn-outline-dark" >Submit</button>
+          <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-2 offset-3 edit-btn"> Edit </a>
+
+
+          <form action="/listings/<%= listing._id %>?_method=DELETE" method="POST">
+            <button class="btn btn-dark offset-5"> Delete </button>
+            <!-- type="submit" -->
           </form>
+        </div>
+        <% } %>
 
-          <hr>
-          <p><b>All Reviews</b></p>
+          <!-- <hr>
+          <div class="col-8 offset-3" mb-3>
+            <h4>Leave a Review</h4>
+            <form>
+              <div class="mb-3 mt-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]">
+              </div>
 
-          <div class="row">
-            <!-- card ko row me show kro,review card ko -->
-         
-          <% for(review of listing.reviews) { %>
-           <div class="card col-5 ms-3 mb-3" >
-            <div class="card-body">
-              <h5 class="card-title"> RAushan Raj</h5>
-              <p class="card-text"><%= review.comment %></p>
-              <p class="card-text"> <%=review.rating %> stars</p>
-            </div>
-            <form  class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method="DELETE">
-              <button class="btn btn-sm btn-dark">Delete Review</button>
+              <div class="mb-3 mt-3">
+                <label for="comment" class="form-label">Comments</label>
+                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"></textarea>
+              </div>
+              <button class="btn btn-outline-dark">Submit</button>
             </form>
-           </div>
-          <% } %>
-        </div>
-            
-         
-        </div>
-
-
-
-
+          </div> -->
 
 
     </div>
-</body>
-   
+
+
+
+    <!-- REVIEW SECTION -->
+
+
+
+    <!-- jb user logged in ho tab hi rating kr skta hai -->
+
+    <div class="col-6 offset-3" mb-3>
+      <% if(currUser) { %>
+        <hr>
+        <h4>Leave a Review</h4>
+        <form action="/listings/<%= listing._id%>/reviews" method='POST' novalidate class='needs-validation'>
+          <!-- <div class="mb-3 mt-3">
+            <label for="rating" class="form-label">Rating</label>
+            <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+          </div> -->
+
+          <div class="mb-3 mt-3">
+            <!-- for star design type rating -->
+            <label for="rating" class="form-label">Rating</label>
+            <fieldset class="starability-slot">
+              <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked
+                aria-label="No rating." />
+              <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+              <label for="first-rate1" title="Terrible">1 star</label>
+              <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+              <label for="first-rate2" title="Not good">2 stars</label>
+              <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+              <label for="first-rate3" title="Average">3 stars</label>
+              <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+              <label for="first-rate4" title="Very good">4 stars</label>
+              <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+              <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
+          </div>
+
+
+          <div class="mb-3 mt-3">
+            <label for="comment" class="form-label">Comments</label>
+            <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+            <div class="invalid-feedback">Please add some comments for review</div>
+          </div>
+          <button class="btn btn-outline-dark">Submit</button>
+        </form>
+        <hr>
+        <% } %>
+
+
+          <% if(listing.reviews.length>0) { %>
+            <!-- length 0 se bada then hm reviews show krnege nii toh ni,ek v review nhi tha tab v all reviews likha aa rha tha -->
+            <div class="row">
+              <!-- card ko row me show kro,review card ko -->
+              <p><b>All Reviews</b></p>
+              <% for(review of listing.reviews) { %>
+                <div class="card col-5 ms-3 mb-3">
+                  <div class="card-body">
+                    <h5 class="card-title">
+                      <%=review.author.username %>
+                    </h5>
+                    <!-- Showing the static rating result
+                  https://github.com/LunarLogic/starability -->
+                    <p class="starability-result card-text" data-rating="<%=review.rating %>"></p>
+                    <p class="card-text">
+                      <%= review.comment %>
+                    </p>
+
+
+                    <form class="mb-3" method="POST"
+                      action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+                      <button class="btn btn-sm btn-dark">Delete Review</button>
+                    </form>
+                  </div>
+
+                  <!-- <form class="mb-3" method="POST"
+                  action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE">
+                  <button class="btn btn-sm btn-dark">Delete Review</button>
+                </form> -->
+
+
+                </div>
+                <% } %>
+            </div>
+            <% } %>
+    </div>
+
+    <!-- for map -->
+    <div class="col-8 offset-3 mb-3">
+      <h3>where you'll be</h3>
+      <div id="map" class="map-container"></div>
+    </div>
+
+  </div>
+
+
+  <!-- //for map features -->
+  <script src="/js/map.js"></script>
+
+
+  <!-- </body>  -->
 
 
 
@@ -118,18 +197,4 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <li> &#8377; <%= listing.price.toLocaleString("en-IN") %></li>=>indian rupees me comma ke sth show hoga -->
+  <!-- <li> &#8377; <%= listing.price.toLocaleString("en-IN") %></li>=>indian rupees me comma ke sth show hoga
